[gd_scene load_steps=20 format=4 uid="uid://38emvneixltm"]

[ext_resource type="Texture2D" uid="uid://6vk5h8sggtv6" path="res://assets/img/rooms/IT.jpeg" id="1_o7vxr"]
[ext_resource type="Script" path="res://scenes/it.gd" id="1_r8ooi"]
[ext_resource type="Texture2D" uid="uid://b017xghl11hss" path="res://assets/img/postitnote.png" id="2_nf522"]
[ext_resource type="Script" path="res://scenes/postitnote.gd" id="3_cxxw7"]
[ext_resource type="Texture2D" uid="uid://dm2dqsbikw2sh" path="res://assets/img/tilesets/Tile-Atlas 16x16.png" id="4_isspg"]
[ext_resource type="Texture2D" uid="uid://0ig04xdip265" path="res://assets/img/tilesets/office.jpg" id="5_xb7lv"]
[ext_resource type="Texture2D" uid="uid://cfq4i5xvsdyxm" path="res://assets/img/door_closed.png" id="6_i3phd"]
[ext_resource type="Script" path="res://scenes/player-it.gd" id="7_xqf6p"]
[ext_resource type="Texture2D" uid="uid://dvn6vn0qbl57v" path="res://assets/img/player/character.png" id="8_hppiq"]
[ext_resource type="PackedScene" uid="uid://rf6s230ixwd0" path="res://scenes/pause_menu.tscn" id="10_xlshx"]
[ext_resource type="Texture2D" uid="uid://bujwqt1cjpb7j" path="res://assets/img/icon/pause.png" id="11_l6aoh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsgdk"]
texture = ExtResource("4_isspg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:15/0 = 0
6:15/0 = 0
17:4/0 = 0
16:4/0 = 0
16:5/0 = 0
16:6/0 = 0
17:7/0 = 0
17:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ge2a2"]
texture = ExtResource("5_xb7lv")
texture_region_size = Vector2i(15, 16)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xmav0"]
tile_size = Vector2i(15, 16)
sources/0 = SubResource("TileSetAtlasSource_qsgdk")
sources/4 = SubResource("TileSetAtlasSource_ge2a2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5ngk"]
size = Vector2(54, 591.688)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5rt0"]
size = Vector2(119, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_tewm7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_hppiq")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi36d"]
size = Vector2(65.5, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q72je"]
size = Vector2(1134, 58)

[node name="IT" type="Node2D"]
position = Vector2(17, 0)
script = ExtResource("1_r8ooi")

[node name="background" type="TextureRect" parent="."]
show_behind_parent = true
z_index = -430
offset_left = -5.0
offset_top = -7.0
offset_right = 1246.0
offset_bottom = 572.0
texture = ExtResource("1_o7vxr")
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1051.0
offset_top = 216.0
offset_right = 1226.0
offset_bottom = 288.0
texture = ExtResource("2_nf522")
expand_mode = 1
script = ExtResource("3_cxxw7")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 42.0
offset_top = 10.0
offset_right = 179.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "user: overlord
password: escape"

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
position = Vector2(1, 120)
tile_set = SubResource("TileSet_xmav0")
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD//xwABAAAAAAAAAD//x0ABAAAAAAAAAD//xYAAAAFAAkAAAD//xUAAAAFAAkAAAD//xQAAAAFAAkAAAD//xMAAAAFAAkAAAD//xIAAAAFAAkAAAD//xEAAAAFAAkAAAD//xAAAAAFAAkAAAD//w8AAAAFAAkAAAD//w4AAAAFAAkAAAD//w0AAAAFAAkAAAD//wwAAAAFAAkAAAD//wsAAAAFAAkAAAD//woAAAAFAAkAAAD//wkAAAAFAAkAAAD//wgAAAAFAAkAAAD//wcAAAAFAAkAAAD//wYAAAAFAAkAAAD//wUAAAAFAAkAAAD//wQAAAAFAAkAAAD//wMAAAAFAAkAAAD//wIAAAAFAAkAAAD//x4ABAAAAAAAAAD//x8ABAAAAAAAAAAAABwABAAAAAAAAABGAB0ABAAAAAAAAABFAB0ABAAAAAAAAABEAB0ABAAAAAAAAABDAB0ABAAAAAAAAABCAB0ABAAAAAAAAABBAB0ABAAAAAAAAABAAB0ABAAAAAAAAAA/AB0ABAAAAAAAAAA+AB0ABAAAAAAAAAA9AB0ABAAAAAAAAAA8AB0ABAAAAAAAAAA6AB0ABAAAAAAAAAA5AB0ABAAAAAAAAAA4AB0ABAAAAAAAAAA3AB0ABAAAAAAAAAA2AB0ABAAAAAAAAAA1AB0ABAAAAAAAAAA0AB0ABAAAAAAAAAAzAB0ABAAAAAAAAAAyAB0ABAAAAAAAAAAxAB0ABAAAAAAAAAAwAB0ABAAAAAAAAAAvAB0ABAAAAAAAAAAuAB0ABAAAAAAAAAAuAB4ABAAAAAAAAAAtAB4ABAAAAAAAAAAsAB4ABAAAAAAAAAArAB4ABAAAAAAAAAAqAB4ABAAAAAAAAAApAB4ABAAAAAAAAAAoAB4ABAAAAAAAAAAnAB4ABAAAAAAAAAAmAB4ABAAAAAAAAAAlAB0ABAAAAAAAAAAkAB0ABAAAAAAAAAAjAB0ABAAAAAAAAAAiAB0ABAAAAAAAAAAhAB0ABAAAAAAAAAAgAB0ABAAAAAAAAAAfAB0ABAAAAAAAAAAeAB0ABAAAAAAAAAAmAB0ABAAAAAAAAAAnAB0ABAAAAAAAAAAoAB0ABAAAAAAAAAApAB0ABAAAAAAAAAAqAB0ABAAAAAAAAAArAB0ABAAAAAAAAAAsAB0ABAAAAAAAAAAtAB0ABAAAAAAAAAAaAB0ABAAAAAAAAAAZAB0ABAAAAAAAAAAYAB0ABAAAAAAAAAAXAB0ABAAAAAAAAAAWAB0ABAAAAAAAAAAVAB0ABAAAAAAAAAAVAB4ABAAAAAAAAAAUAB4ABAAAAAAAAAATAB4ABAAAAAAAAAASAB4ABAAAAAAAAAARAB4ABAAAAAAAAAAQAB4ABAAAAAAAAAAPAB4ABAAAAAAAAAAOAB4ABAAAAAAAAAANAB4ABAAAAAAAAAAMAB4ABAAAAAAAAAALAB4ABAAAAAAAAAAKAB4ABAAAAAAAAAAJAB4ABAAAAAAAAAAIAB0ABAAAAAAAAAAHAB0ABAAAAAAAAAAGAB0ABAAAAAAAAAAFAB0ABAAAAAAAAAAEAB0ABAAAAAAAAAADAB0ABAAAAAAAAAACAB0ABAAAAAAAAAABAB0ABAAAAAAAAAAAAB0ABAAAAAAAAAAJAB0ABAAAAAAAAAAKAB0ABAAAAAAAAAALAB0ABAAAAAAAAAAAAB4ABAAAAAAAAAABAB4ABAAAAAAAAAACAB4ABAAAAAAAAAADAB4ABAAAAAAAAAAEAB4ABAAAAAAAAAAFAB4ABAAAAAAAAAAGAB4ABAAAAAAAAAAHAB4ABAAAAAAAAAAIAB4ABAAAAAAAAAAAAB8ABAAAAAAAAAABAB8ABAAAAAAAAAACAB8ABAAAAAAAAAADAB8ABAAAAAAAAAAEAB8ABAAAAAAAAAAFAB8ABAAAAAAAAAAGAB8ABAAAAAAAAAAHAB8ABAAAAAAAAAAIAB8ABAAAAAAAAAAKAB8ABAAAAAAAAAALAB8ABAAAAAAAAAAJAB8ABAAAAAAAAAAMAB8ABAAAAAAAAAANAB8ABAAAAAAAAAAOAB8ABAAAAAAAAAAPAB8ABAAAAAAAAAAQAB8ABAAAAAAAAAARAB8ABAAAAAAAAAASAB8ABAAAAAAAAAATAB8ABAAAAAAAAAAUAB8ABAAAAAAAAAAVAB8ABAAAAAAAAAAWAB8ABAAAAAAAAAAXAB8ABAAAAAAAAAAYAB8ABAAAAAAAAAAZAB8ABAAAAAAAAAAaAB8ABAAAAAAAAAAbAB8ABAAAAAAAAAAcAB8ABAAAAAAAAAAdAB8ABAAAAAAAAAAeAB8ABAAAAAAAAAAfAB8ABAAAAAAAAAAgAB8ABAAAAAAAAAAhAB8ABAAAAAAAAAAiAB8ABAAAAAAAAAAjAB8ABAAAAAAAAAAkAB8ABAAAAAAAAAAlAB8ABAAAAAAAAAAmAB8ABAAAAAAAAAAnAB8ABAAAAAAAAAAoAB8ABAAAAAAAAAApAB8ABAAAAAAAAAAqAB8ABAAAAAAAAAArAB8ABAAAAAAAAAAsAB8ABAAAAAAAAAAtAB8ABAAAAAAAAAAuAB8ABAAAAAAAAAAvAB8ABAAAAAAAAAAwAB8ABAAAAAAAAAAvAB4ABAAAAAAAAAAlAB4ABAAAAAAAAAAkAB4ABAAAAAAAAAAjAB4ABAAAAAAAAAAiAB4ABAAAAAAAAAAhAB4ABAAAAAAAAAAgAB4ABAAAAAAAAAAfAB4ABAAAAAAAAAAeAB4ABAAAAAAAAAAdAB4ABAAAAAAAAAAcAB4ABAAAAAAAAAAbAB4ABAAAAAAAAAAaAB4ABAAAAAAAAAAZAB4ABAAAAAAAAAAYAB4ABAAAAAAAAAAXAB4ABAAAAAAAAAAWAB4ABAAAAAAAAAAxAB8ABAAAAAAAAAAyAB8ABAAAAAAAAAAzAB8ABAAAAAAAAAA0AB8ABAAAAAAAAAA1AB8ABAAAAAAAAAA2AB8ABAAAAAAAAAA3AB8ABAAAAAAAAAA4AB8ABAAAAAAAAAA5AB8ABAAAAAAAAAA6AB8ABAAAAAAAAAA7AB8ABAAAAAAAAAA8AB8ABAAAAAAAAAA9AB8ABAAAAAAAAAA+AB8ABAAAAAAAAAA/AB8ABAAAAAAAAABAAB8ABAAAAAAAAABBAB8ABAAAAAAAAABCAB8ABAAAAAAAAABDAB8ABAAAAAAAAABEAB8ABAAAAAAAAABFAB8ABAAAAAAAAABGAB8ABAAAAAAAAABGAB4ABAAAAAAAAABFAB4ABAAAAAAAAABEAB4ABAAAAAAAAABDAB4ABAAAAAAAAABCAB4ABAAAAAAAAABBAB4ABAAAAAAAAABAAB4ABAAAAAAAAAA/AB4ABAAAAAAAAAA+AB4ABAAAAAAAAAA9AB4ABAAAAAAAAAA8AB4ABAAAAAAAAAA7AB4ABAAAAAAAAAA6AB4ABAAAAAAAAAA5AB4ABAAAAAAAAAA4AB4ABAAAAAAAAAA3AB4ABAAAAAAAAAA2AB4ABAAAAAAAAAA1AB4ABAAAAAAAAAA0AB4ABAAAAAAAAAAzAB4ABAAAAAAAAAAyAB4ABAAAAAAAAAAxAB4ABAAAAAAAAAAwAB4ABAAAAAAAAAD+/wEAAAAFAAkAAAD//wEAAAAFAAkAAAD//wAAAAAFAAkAAAD/////AAAFAAkAAAD///7/AAAFAAkAAAD///3/AAAFAAkAAAD///z/AAAFAAkAAAD///v/AAAFAAkAAAD///r/AAAFAAkAAAD+//r/AAAFAAkAAAD//xcAAAAEAAkAAAD///n/AAAEAAkAAAD///j/AAAEAAkAAAD//yAABAAAAAAAAAAAACAABAAAAAAAAAABACAABAAAAAAAAAACACAABAAAAAAAAAADACAABAAAAAAAAAAEACAABAAAAAAAAAAFACAABAAAAAAAAAAEACEABAAAAAAAAAAFACEABAAAAAAAAAAGACAABAAAAAAAAAAHACAABAAAAAAAAAAIACAABAAAAAAAAAAJACAABAAAAAAAAAAKACAABAAAAAAAAAALACAABAAAAAAAAAAMACAABAAAAAAAAAANACAABAAAAAAAAAAOACAABAAAAAAAAAAPACAABAAAAAAAAAAQACAABAAAAAAAAAARACAABAAAAAAAAAASACAABAAAAAAAAAATACAABAAAAAAAAAAUACAABAAAAAAAAAAVACAABAAAAAAAAAAWACAABAAAAAAAAAD+/yAABAAAAAAAAAACACEABAAAAAAAAAABACEABAAAAAAAAAAAACEABAAAAAAAAAD//yEABAAAAAAAAAD+/yEABAAAAAAAAAD9/yEABAAAAAAAAAD9/yIABAAAAAAAAAD+/yIABAAAAAAAAAD//yIABAAAAAAAAAAAACIABAAAAAAAAAABACMABAAAAAAAAAACACMABAAAAAAAAAADACMABAAAAAAAAAAEACMABAAAAAAAAAAFACMABAAAAAAAAAAGACMABAAAAAAAAAAHACMABAAAAAAAAAAIACMABAAAAAAAAAAGACIABAAAAAAAAAAHACIABAAAAAAAAAAIACIABAAAAAAAAAAJACMABAAAAAAAAAAKACMABAAAAAAAAAALACMABAAAAAAAAAAMACMABAAAAAAAAAANACMABAAAAAAAAAAOACMABAAAAAAAAAAPACMABAAAAAAAAAAQACMABAAAAAAAAAARACMABAAAAAAAAAASACMABAAAAAAAAAATACMABAAAAAAAAAAUACMABAAAAAAAAAAVACQABAAAAAAAAAAWACQABAAAAAAAAAAWACMABAAAAAAAAAAVACMABAAAAAAAAAATACIABAAAAAAAAAASACIABAAAAAAAAAARACEABAAAAAAAAAAQACEABAAAAAAAAAAPACEABAAAAAAAAAANACEABAAAAAAAAAAOACEABAAAAAAAAAAPACIABAAAAAAAAAAJACIABAAAAAAAAAADACEABAAAAAAAAAD9/yMABAAAAAAAAAD+/yMABAAAAAAAAAD//yQABAAAAAAAAAAAACQABAAAAAAAAAABACQABAAAAAAAAAACACQABAAAAAAAAAADACUABAAAAAAAAAAEACUABAAAAAAAAAAFACUABAAAAAAAAAAGACYABAAAAAAAAAAHACYABAAAAAAAAAAIACYABAAAAAAAAAAJACYABAAAAAAAAAAKACYABAAAAAAAAAASACYABAAAAAAAAAARACYABAAAAAAAAAAQACUABAAAAAAAAAAPACUABAAAAAAAAAAOACQABAAAAAAAAAANACQABAAAAAAAAAAMACQABAAAAAAAAAAIACEABAAAAAAAAAAHACEABAAAAAAAAAAJACEABAAAAAAAAAAKACEABAAAAAAAAAALACEABAAAAAAAAAAMACIABAAAAAAAAAANACIABAAAAAAAAAARACQABAAAAAAAAAASACQABAAAAAAAAAATACQABAAAAAAAAAAUACQABAAAAAAAAAAQACIABAAAAAAAAAAOACIABAAAAAAAAAAMACEABAAAAAAAAAARACIABAAAAAAAAAAXACQABAAAAAAAAAAYACQABAAAAAAAAAAZACQABAAAAAAAAAAaACUABAAAAAAAAAAbACUABAAAAAAAAAAcACUABAAAAAAAAAAaACQABAAAAAAAAAAXACMABAAAAAAAAAAVACIABAAAAAAAAAAUACIABAAAAAAAAAATACEABAAAAAAAAAASACEABAAAAAAAAAALACIABAAAAAAAAAAQACQABAAAAAAAAAAPACQABAAAAAAAAAAKACIABAAAAAAAAAAGACEABAAAAAAAAAD+/x8ABAAAAAAAAAD9/x8ABAAAAAAAAAD9/yAABAAAAAAAAAAGACUABAAAAAAAAAADACQABAAAAAAAAAAAACMABAAAAAAAAAAHACUABAAAAAAAAAALACYABAAAAAAAAAAOACYABAAAAAAAAAANACUABAAAAAAAAAAMACUABAAAAAAAAAALACQABAAAAAAAAAAKACQABAAAAAAAAAAFACIABAAAAAAAAAAOACUABAAAAAAAAAARACUABAAAAAAAAAASACUABAAAAAAAAAATACUABAAAAAAAAAAUACUABAAAAAAAAAAVACUABAAAAAAAAAAWACUABAAAAAAAAAAXACYABAAAAAAAAAAUACEABAAAAAAAAAAVACEABAAAAAAAAAAWACEABAAAAAAAAAAXACEABAAAAAAAAAAYACEABAAAAAAAAAAZACAABAAAAAAAAAAaACAABAAAAAAAAAAbACAABAAAAAAAAAAcACAABAAAAAAAAAAdACAABAAAAAAAAAAeACAABAAAAAAAAAAfACAABAAAAAAAAAAgACAABAAAAAAAAAAhACAABAAAAAAAAAAiACAABAAAAAAAAAAjACAABAAAAAAAAAAkACAABAAAAAAAAAAlACAABAAAAAAAAAAmACAABAAAAAAAAAAnACAABAAAAAAAAAAmACEABAAAAAAAAAAlACEABAAAAAAAAAAkACEABAAAAAAAAAAjACEABAAAAAAAAAAiACEABAAAAAAAAAAhACEABAAAAAAAAAAgACEABAAAAAAAAAAfACIABAAAAAAAAAAeACIABAAAAAAAAAAdACIABAAAAAAAAAAcACIABAAAAAAAAAAbACIABAAAAAAAAAAaACIABAAAAAAAAAAZACIABAAAAAAAAAAYACIABAAAAAAAAAAXACIABAAAAAAAAAAWACIABAAAAAAAAAAYACMABAAAAAAAAAAgACIABAAAAAAAAAAhACIABAAAAAAAAAAiACIABAAAAAAAAAAjACIABAAAAAAAAAAkACIABAAAAAAAAAAlACIABAAAAAAAAAAmACIABAAAAAAAAAAnACIABAAAAAAAAAAoACIABAAAAAAAAAApACIABAAAAAAAAAAqACIABAAAAAAAAAArACIABAAAAAAAAAAsACIABAAAAAAAAAAtACIABAAAAAAAAAAuACIABAAAAAAAAAAvACIABAAAAAAAAAAwACIABAAAAAAAAAAxACIABAAAAAAAAAAyACIABAAAAAAAAAAyACEABAAAAAAAAAAxACEABAAAAAAAAAAwACEABAAAAAAAAAAvACEABAAAAAAAAAAuACAABAAAAAAAAAAtACAABAAAAAAAAAAsACAABAAAAAAAAAArACAABAAAAAAAAAAqACMABAAAAAAAAAArACMABAAAAAAAAAAsACMABAAAAAAAAAAtACMABAAAAAAAAAApACMABAAAAAAAAAAoACMABAAAAAAAAAAnACMABAAAAAAAAAAmACMABAAAAAAAAAAlACMABAAAAAAAAAAdACUABAAAAAAAAAAeACUABAAAAAAAAAAfACUABAAAAAAAAAAdACQABAAAAAAAAAAcACQABAAAAAAAAAAbACQABAAAAAAAAAAZACMABAAAAAAAAAAaACMABAAAAAAAAAAbACMABAAAAAAAAAAcACMABAAAAAAAAAAdACMABAAAAAAAAAAeACMABAAAAAAAAAAfACMABAAAAAAAAAAgACMABAAAAAAAAAAhACMABAAAAAAAAAAiACMABAAAAAAAAAAjACMABAAAAAAAAAAkACMABAAAAAAAAAAuACMABAAAAAAAAAAvACMABAAAAAAAAAAqACEABAAAAAAAAAApACEABAAAAAAAAAAoACAABAAAAAAAAAAnACEABAAAAAAAAAAoACEABAAAAAAAAAArACEABAAAAAAAAAAeACQABAAAAAAAAAAfACQABAAAAAAAAAAgACQABAAAAAAAAAAhACQABAAAAAAAAAAiACQABAAAAAAAAAAjACQABAAAAAAAAAAkACQABAAAAAAAAAAlACQABAAAAAAAAAAmACQABAAAAAAAAAAnACUABAAAAAAAAAAoACUABAAAAAAAAAApACUABAAAAAAAAAAqACUABAAAAAAAAAArACUABAAAAAAAAAAsACUABAAAAAAAAAAtACYABAAAAAAAAAAuACYABAAAAAAAAAAvACYABAAAAAAAAAAtACUABAAAAAAAAAAqACQABAAAAAAAAAApACQABAAAAAAAAAAoACQABAAAAAAAAAAnACQABAAAAAAAAAAuACUABAAAAAAAAAAvACUABAAAAAAAAAAwACUABAAAAAAAAAAxACUABAAAAAAAAAAyACUABAAAAAAAAAAzACUABAAAAAAAAAA0ACUABAAAAAAAAAA1ACUABAAAAAAAAAA2ACUABAAAAAAAAAA3ACUABAAAAAAAAAA4ACUABAAAAAAAAAA5ACUABAAAAAAAAAA6ACUABAAAAAAAAAA7ACUABAAAAAAAAAA8ACUABAAAAAAAAAA9ACUABAAAAAAAAAA+ACUABAAAAAAAAAA/ACUABAAAAAAAAABAACUABAAAAAAAAABBACUABAAAAAAAAABCACUABAAAAAAAAABDACUABAAAAAAAAABAACQABAAAAAAAAAA/ACQABAAAAAAAAAA+ACQABAAAAAAAAAA9ACQABAAAAAAAAAA8ACMABAAAAAAAAAA7ACMABAAAAAAAAAA6ACMABAAAAAAAAAA5ACMABAAAAAAAAAA4ACMABAAAAAAAAAA3ACIABAAAAAAAAAA2ACIABAAAAAAAAAA1ACIABAAAAAAAAAA0ACIABAAAAAAAAAAzACIABAAAAAAAAAAwACMABAAAAAAAAAAxACMABAAAAAAAAAAyACMABAAAAAAAAAAzACMABAAAAAAAAAA0ACMABAAAAAAAAAA1ACQABAAAAAAAAAA2ACQABAAAAAAAAAA0ACQABAAAAAAAAAAzACQABAAAAAAAAAAyACQABAAAAAAAAAAxACQABAAAAAAAAAAiACUABAAAAAAAAAAjACUABAAAAAAAAAAkACUABAAAAAAAAAAlACUABAAAAAAAAAAmACUABAAAAAAAAAAnACYABAAAAAAAAAAoACYABAAAAAAAAAApACYABAAAAAAAAAAqACYABAAAAAAAAAArACYABAAAAAAAAAAsACYABAAAAAAAAAA6ACYABAAAAAAAAAA5ACYABAAAAAAAAAAsACQABAAAAAAAAAAtACQABAAAAAAAAAAuACQABAAAAAAAAAAvACQABAAAAAAAAAA1ACYABAAAAAAAAAA2ACYABAAAAAAAAAA3ACYABAAAAAAAAAA4ACYABAAAAAAAAAA7ACYABAAAAAAAAAA8ACYABAAAAAAAAAA9ACYABAAAAAAAAAA+ACYABAAAAAAAAAA/ACYABAAAAAAAAABAACYABAAAAAAAAABBACYABAAAAAAAAABCACYABAAAAAAAAABDACYABAAAAAAAAABEACYABAAAAAAAAABFACYABAAAAAAAAABGACYABAAAAAAAAABHACYABAAAAAAAAABIACYABAAAAAAAAABJACYABAAAAAAAAABKACYABAAAAAAAAABLACYABAAAAAAAAABMACYABAAAAAAAAABNACYABAAAAAAAAABOACYABAAAAAAAAABOACUABAAAAAAAAABNACUABAAAAAAAAABMACUABAAAAAAAAABLACUABAAAAAAAAABKACQABAAAAAAAAABJACQABAAAAAAAAABIACQABAAAAAAAAABHACQABAAAAAAAAABGACQABAAAAAAAAABFACQABAAAAAAAAABEACQABAAAAAAAAABDACQABAAAAAAAAABCACQABAAAAAAAAABBACQABAAAAAAAAAA3ACMABAAAAAAAAAA2ACMABAAAAAAAAAA1ACMABAAAAAAAAAA3ACQABAAAAAAAAAA4ACQABAAAAAAAAABEACUABAAAAAAAAABFACUABAAAAAAAAABLACQABAAAAAAAAABIACMABAAAAAAAAABHACMABAAAAAAAAABGACMABAAAAAAAAABFACMABAAAAAAAAABEACIABAAAAAAAAABDACIABAAAAAAAAABCACIABAAAAAAAAABBACIABAAAAAAAAABAACIABAAAAAAAAAA/ACIABAAAAAAAAAA+ACIABAAAAAAAAAA9ACIABAAAAAAAAAA8ACIABAAAAAAAAAA/ACMABAAAAAAAAABAACMABAAAAAAAAABBACMABAAAAAAAAABCACMABAAAAAAAAABDACMABAAAAAAAAABKACUABAAAAAAAAABMACQABAAAAAAAAABEACMABAAAAAAAAAA+ACMABAAAAAAAAAA9ACMABAAAAAAAAAA4ACIABAAAAAAAAABGACUABAAAAAAAAABHACUABAAAAAAAAABIACUABAAAAAAAAABJACUABAAAAAAAAABNACIABAAAAAAAAABMACEABAAAAAAAAABLACEABAAAAAAAAABKACAABAAAAAAAAABJACAABAAAAAAAAABIACAABAAAAAAAAABHACAABAAAAAAAAABDACAABAAAAAAAAABEACAABAAAAAAAAABFACAABAAAAAAAAABGACAABAAAAAAAAABIACEABAAAAAAAAABJACEABAAAAAAAAABKACEABAAAAAAAAABMACIABAAAAAAAAABHACEABAAAAAAAAABFACEABAAAAAAAAABGACEABAAAAAAAAABHACIABAAAAAAAAABIACIABAAAAAAAAABJACMABAAAAAAAAABKACMABAAAAAAAAABLACMABAAAAAAAAABNACQABAAAAAAAAABGACIABAAAAAAAAABFACIABAAAAAAAAABBACEABAAAAAAAAABAACEABAAAAAAAAAA/ACEABAAAAAAAAAA+ACEABAAAAAAAAAA9ACEABAAAAAAAAAA8ACEABAAAAAAAAAA7ACEABAAAAAAAAABNACMABAAAAAAAAABMACMABAAAAAAAAABLACIABAAAAAAAAAA9ACAABAAAAAAAAAA+ACAABAAAAAAAAAA/ACAABAAAAAAAAABCACEABAAAAAAAAABJACIABAAAAAAAAABCACAABAAAAAAAAABBACAABAAAAAAAAABAACAABAAAAAAAAAA8ACAABAAAAAAAAABKACIABAAAAAAAAABLACAABAAAAAAAAABJAB8ABAAAAAAAAABIAB8ABAAAAAAAAABHAB8ABAAAAAAAAABKAB8ABAAAAAAAAABLAB8ABAAAAAAAAABNACAABAAAAAAAAABLAB4ABAAAAAAAAABKAB4ABAAAAAAAAABJAB4ABAAAAAAAAABEACEABAAAAAAAAABDACEABAAAAAAAAAA7ACIABAAAAAAAAAA6ACIABAAAAAAAAAA5ACEABAAAAAAAAAA4ACEABAAAAAAAAAA3ACEABAAAAAAAAAA2ACEABAAAAAAAAAA1ACEABAAAAAAAAAA0ACEABAAAAAAAAAAzACEABAAAAAAAAAAyACAABAAAAAAAAAAxACAABAAAAAAAAAAwACAABAAAAAAAAAA7ACQABAAAAAAAAAA8ACQABAAAAAAAAAA5ACIABAAAAAAAAAA1ACAABAAAAAAAAAA0ACAABAAAAAAAAAAzACAABAAAAAAAAAAtACEABAAAAAAAAAAuACEABAAAAAAAAAA6ACQABAAAAAAAAAA5ACQABAAAAAAAAAAwACQABAAAAAAAAAAwACYABAAAAAAAAAAxACYABAAAAAAAAAAyACYABAAAAAAAAAAzACYABAAAAAAAAAA0ACYABAAAAAAAAAAmACYABAAAAAAAAAAlACYABAAAAAAAAAAkACYABAAAAAAAAAAjACYABAAAAAAAAAAiACYABAAAAAAAAAAhACYABAAAAAAAAAAgACYABAAAAAAAAAAfACYABAAAAAAAAAAeACYABAAAAAAAAAAdACYABAAAAAAAAAAcACYABAAAAAAAAAAbACYABAAAAAAAAAAaACYABAAAAAAAAAAZACYABAAAAAAAAAAYACYABAAAAAAAAAAWACYABAAAAAAAAAAVACYABAAAAAAAAAAUACYABAAAAAAAAAATACYABAAAAAAAAAAQACYABAAAAAAAAAAPACYABAAAAAAAAAANACYABAAAAAAAAAAMACYABAAAAAAAAAAFACYABAAAAAAAAAAEACYABAAAAAAAAAADACYABAAAAAAAAAACACYABAAAAAAAAAAJACQABAAAAAAAAAAIACQABAAAAAAAAAAHACQABAAAAAAAAAAGACQABAAAAAAAAAAFACQABAAAAAAAAAAEACQABAAAAAAAAAD+/yQABAAAAAAAAAD9/yQABAAAAAAAAAD+/yUABAAAAAAAAAD//yUABAAAAAAAAAAAACUABAAAAAAAAAABACYABAAAAAAAAAAAACYABAAAAAAAAAAYACUABAAAAAAAAAAZACUABAAAAAAAAAAJACUABAAAAAAAAAAKACUABAAAAAAAAAAIACUABAAAAAAAAAALACUABAAAAAAAAAAXACUABAAAAAAAAAAgACUABAAAAAAAAAAhACUABAAAAAAAAAArACQABAAAAAAAAAAsACEABAAAAAAAAAA2ACAABAAAAAAAAAA3ACAABAAAAAAAAAA4ACAABAAAAAAAAAA5ACAABAAAAAAAAAA6ACAABAAAAAAAAAA7ACAABAAAAAAAAAA6ACEABAAAAAAAAAAvACAABAAAAAAAAAAqACAABAAAAAAAAAApACAABAAAAAAAAAAfACEABAAAAAAAAAAdACEABAAAAAAAAAAeACEABAAAAAAAAAAcACEABAAAAAAAAAAbACEABAAAAAAAAAAaACEABAAAAAAAAAAZACEABAAAAAAAAAAXACAABAAAAAAAAAAYACAABAAAAAAAAAAEACIABAAAAAAAAAADACIABAAAAAAAAAD//yMABAAAAAAAAAABACUABAAAAAAAAAACACUABAAAAAAAAAD9/yUABAAAAAAAAAD//yYABAAAAAAAAAD+/yYABAAAAAAAAAD9/yYABAAAAAAAAAABACIABAAAAAAAAAACACIABAAAAAAAAABHAB4ABAAAAAAAAABHAB0ABAAAAAAAAABIAB0ABAAAAAAAAABJAB0ABAAAAAAAAABKAB0ABAAAAAAAAABLAB0ABAAAAAAAAABNAB0ABAAAAAAAAABIAB4ABAAAAAAAAABMABwABAAAAAAAAABNABwABAAAAAAAAABLAPf/AAAFAAkAAAD///f/AAAFAAkAAAAAAPf/AAAFAAkAAAABAPf/AAAFAAkAAAACAPf/AAAFAAkAAAADAPf/AAAFAAkAAAAEAPf/AAAFAAkAAAAFAPf/AAAFAAkAAAAGAPf/AAAFAAkAAAAHAPf/AAAFAAkAAAAIAPf/AAAFAAkAAAAJAPf/AAAFAAkAAAAKAPf/AAAFAAkAAAALAPf/AAAFAAkAAAAMAPf/AAAFAAkAAAANAPf/AAAFAAkAAAAOAPf/AAAFAAkAAAAPAPf/AAAFAAkAAAAQAPf/AAAFAAkAAAARAPf/AAAFAAkAAAASAPf/AAAFAAkAAAATAPf/AAAFAAkAAAAUAPf/AAAFAAkAAAAVAPf/AAAFAAkAAAAWAPf/AAAFAAkAAAAXAPf/AAAFAAkAAAAYAPf/AAAFAAkAAAAZAPf/AAAFAAkAAAAaAPf/AAAFAAkAAAAbAPf/AAAFAAkAAAAcAPf/AAAFAAkAAAAdAPf/AAAFAAkAAAAeAPf/AAAFAAkAAAAfAPf/AAAFAAkAAAAgAPf/AAAFAAkAAAAhAPf/AAAFAAkAAAAiAPf/AAAFAAkAAAAjAPf/AAAFAAkAAAAkAPf/AAAFAAkAAAAlAPf/AAAFAAkAAAAmAPf/AAAFAAkAAAAnAPf/AAAFAAkAAAAoAPf/AAAFAAkAAAApAPf/AAAFAAkAAAAqAPf/AAAFAAkAAAArAPf/AAAFAAkAAAAsAPf/AAAFAAkAAAAtAPf/AAAFAAkAAAAuAPf/AAAFAAkAAAAvAPf/AAAFAAkAAAAwAPf/AAAFAAkAAAAxAPf/AAAFAAkAAAAyAPf/AAAFAAkAAAAzAPf/AAAFAAkAAAA0APf/AAAFAAkAAAA1APf/AAAFAAkAAAA2APf/AAAFAAkAAAA3APf/AAAFAAkAAAA4APf/AAAFAAkAAAA5APf/AAAFAAkAAAA6APf/AAAFAAkAAAA7APf/AAAFAAkAAAA8APf/AAAFAAkAAAA9APf/AAAFAAkAAAA+APf/AAAFAAkAAAA/APf/AAAFAAkAAABAAPb/AAAFAAkAAABBAPb/AAAFAAkAAABCAPb/AAAFAAkAAABDAPb/AAAFAAkAAABEAPb/AAAFAAkAAABFAPb/AAAFAAkAAABGAPb/AAAFAAkAAABHAPb/AAAFAAkAAABIAPb/AAAFAAkAAABJAPb/AAAFAAkAAABKAPb/AAAFAAkAAABLAPb/AAAFAAkAAABKAPf/AAAFAAkAAABJAPf/AAAFAAkAAABAAPf/AAAFAAkAAABHAPf/AAAFAAkAAABIAPf/AAAFAAkAAABGAPf/AAAFAAkAAABFAPf/AAAFAAkAAABEAPf/AAAFAAkAAABDAPf/AAAFAAkAAABCAPf/AAAFAAkAAABBAPf/AAAFAAkAAAA3APj/AAAEAAUAAAA3APn/AAAEAAUAAAA3APr/AAADAAQAAAAcAPj/AAAEAAUAAAAcAPn/AAAEAAUAAAAcAPr/AAADAAQAAABLABwABAAAAAAAAABKABwABAAAAAAAAABJABwABAAAAAAAAABIABwABAAAAAAAAABHABwABAAAAAAAAABGABwABAAAAAAAAABFABwABAAAAAAAAABEABwABAAAAAAAAABDABwABAAAAAAAAABCABwABAAAAAAAAABBABwABAAAAAAAAABAABwABAAAAAAAAAA/ABwABAAAAAAAAAA+ABwABAAAAAAAAAA9ABwABAAAAAAAAAA8ABwABAAAAAAAAAA7ABwABAAAAAAAAAA6ABwABAAAAAAAAAA5ABwABAAAAAAAAAA4ABwABAAAAAAAAAA3ABwABAAAAAAAAAA2ABwABAAAAAAAAAA1ABwABAAAAAAAAAA0ABwABAAAAAAAAAAzABwABAAAAAAAAAAyABwABAAAAAAAAAAxABwABAAAAAAAAAAwABwABAAAAAAAAAAvABwABAAAAAAAAAAuABwABAAAAAAAAAAtABwABAAAAAAAAAAsABwABAAAAAAAAAArABwABAAAAAAAAAAqABwABAAAAAAAAAApABwABAAAAAAAAAAoABwABAAAAAAAAAAnABwABAAAAAAAAAAmABwABAAAAAAAAAAlABwABAAAAAAAAAAkABwABAAAAAAAAAAjABwABAAAAAAAAAAiABwABAAAAAAAAAAhABwABAAAAAAAAAAgABwABAAAAAAAAAAfABwABAAAAAAAAAAeABwABAAAAAAAAAAdABwABAAAAAAAAAAcABwABAAAAAAAAAAbABwABAAAAAAAAAAaABwABAAAAAAAAAAUAB0ABAAAAAAAAAATAB0ABAAAAAAAAAASAB0ABAAAAAAAAAARAB0ABAAAAAAAAAAQAB0ABAAAAAAAAAAPAB0ABAAAAAAAAAAOAB0ABAAAAAAAAAANAB0ABAAAAAAAAAAMAB0ABAAAAAAAAAAZABwABAAAAAAAAAAYABwABAAAAAAAAAAXABwABAAAAAAAAAAWABwABAAAAAAAAAAVABwABAAAAAAAAAAUABwABAAAAAAAAAATABwABAAAAAAAAAASABwABAAAAAAAAAARABwABAAAAAAAAAAQABwABAAAAAAAAAAPABwABAAAAAAAAAAOABwABAAAAAAAAAANABwABAAAAAAAAAAMABwABAAAAAAAAAALABwABAAAAAAAAAAKABwABAAAAAAAAAAJABwABAAAAAAAAAAIABwABAAAAAAAAAAHABwABAAAAAAAAAAGABwABAAAAAAAAAAFABwABAAAAAAAAAAEABwABAAAAAAAAAADABwABAAAAAAAAAACABwABAAAAAAAAAABABwABAAAAAAAAAAbAB0ABAAAAAAAAAAcAB0ABAAAAAAAAAAdAB0ABAAAAAAAAAA7AB0ABAAAAAAAAABOABwABAAAAAAAAABOAB0ABAAAAAAAAABOAB4ABAAAAAAAAABOAB8ABAAAAAAAAABOACAABAAAAAAAAABOACEABAAAAAAAAABOACQABAAAAAAAAABOACMABAAAAAAAAABOACIABAAAAAAAAABNACEABAAAAAAAAABMACAABAAAAAAAAABMAB8ABAAAAAAAAABMAB4ABAAAAAAAAABMAB0ABAAAAAAAAABNAB4ABAAAAAAAAABNAB8ABAAAAAAAAAD//xgAAAAEAAkAAAD//xkAAAAEAAkAAAD//xoAAAAEAAkAAAD//xsAAAAEAAkAAAD//ycABAAAAAAAAABPABwABAAAAAAAAABPAB0ABAAAAAAAAABPAB4ABAAAAAAAAABPAB8ABAAAAAAAAABPACAABAAAAAAAAABPACEABAAAAAAAAABPACIABAAAAAAAAABPACMABAAAAAAAAABPACQABAAAAAAAAABPACUABAAAAAAAAABPACYABAAAAAAAAABQABwABAAAAAAAAABQAB0ABAAAAAAAAABQAB4ABAAAAAAAAABQAB8ABAAAAAAAAABQACAABAAAAAAAAABQACEABAAAAAAAAABQACIABAAAAAAAAABQACMABAAAAAAAAABQACQABAAAAAAAAABQACUABAAAAAAAAABQACYABAAAAAAAAABRABwABAAAAAAAAABRAB0ABAAAAAAAAABRAB4ABAAAAAAAAABRAB8ABAAAAAAAAABRACAABAAAAAAAAABRACEABAAAAAAAAABRACIABAAAAAAAAABRACMABAAAAAAAAABRACQABAAAAAAAAABRACUABAAAAAAAAABRACYABAAAAAAAAABSABwABAAAAAAAAABSAB0ABAAAAAAAAABSAB4ABAAAAAAAAABSAB8ABAAAAAAAAABSACAABAAAAAAAAABSACEABAAAAAAAAABSACIABAAAAAAAAABSACMABAAAAAAAAABSACQABAAAAAAAAABSACUABAAAAAAAAABSACYABAAAAAAAAABTABwABAAAAAAAAABTAB0ABAAAAAAAAABTAB4ABAAAAAAAAABTAB8ABAAAAAAAAABTACAABAAAAAAAAABTACEABAAAAAAAAABTACIABAAAAAAAAABTACMABAAAAAAAAABTACQABAAAAAAAAABTACUABAAAAAAAAABTACYABAAAAAAAAABTAPf/AAAFAAkAAABTAPj/AAAFAAkAAABTAPn/AAAFAAkAAABTAPr/AAAFAAkAAABTAPv/AAAFAAkAAABTAPz/AAAFAAkAAABTAP3/AAAFAAkAAABTAP7/AAAFAAkAAABTAP//AAAFAAkAAABTAAAAAAAFAAkAAABTAAEAAAAFAAkAAABTAAIAAAAFAAkAAABTAAMAAAAFAAkAAABTAAQAAAAFAAkAAABTAAUAAAAFAAkAAABTAAYAAAAFAAkAAABTAAcAAAAFAAkAAABTAAgAAAAFAAkAAABTAAkAAAAFAAkAAABTAAoAAAAFAAkAAABTAAsAAAAFAAkAAABTAAwAAAAFAAkAAABTAA0AAAAFAAkAAABTAA4AAAAFAAkAAABTAA8AAAAFAAkAAABTABAAAAAFAAkAAABTABEAAAAFAAkAAABTABIAAAAFAAkAAABTABMAAAAFAAkAAABTABQAAAAFAAkAAABTABUAAAAFAAkAAABTABYAAAAFAAkAAABTABcAAAAFAAkAAABTABgAAAAFAAkAAABTABkAAAAFAAkAAABTABoAAAAFAAkAAABTABsAAAAFAAkAAABMAPf/AAAFAAkAAABNAPf/AAAFAAkAAABOAPf/AAAFAAkAAABPAPf/AAAFAAkAAABQAPf/AAAFAAkAAABRAPf/AAAFAAkAAABSAPf/AAAFAAkAAAA=")
tile_set = SubResource("TileSet_xmav0")

[node name="wallRight" type="StaticBody2D" parent="."]
position = Vector2(85, 68)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wallRight"]
position = Vector2(1145, 202)
shape = SubResource("RectangleShape2D_v5ngk")

[node name="wallLeft" type="StaticBody2D" parent="."]
position = Vector2(-100, 33)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wallLeft"]
position = Vector2(80, 244)
shape = SubResource("RectangleShape2D_v5ngk")

[node name="Door2" type="StaticBody2D" parent="."]
position = Vector2(1214, 483)

[node name="TextureRect" type="TextureRect" parent="Door2"]
offset_left = -21.0
offset_top = 15.0
offset_right = 32.0
offset_bottom = 85.0
texture = ExtResource("6_i3phd")
expand_mode = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2(-30, 52)
shape = SubResource("RectangleShape2D_c5rt0")

[node name="Player" type="Area2D" parent="."]
position = Vector2(1120, 556)
script = ExtResource("7_xqf6p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(2.00009, -13)
scale = Vector2(0.100875, 0.103405)
sprite_frames = SubResource("SpriteFrames_tewm7")
animation = &"new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0.25, -1.5)
shape = SubResource("RectangleShape2D_mi36d")

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(568, 571)

[node name="hit" type="CollisionShape2D" parent="ground"]
position = Vector2(4, 33)
shape = SubResource("RectangleShape2D_q72je")
debug_color = Color(0.981857, 0, 0.367369, 0.42)

[node name="PauseMenu" parent="." instance=ExtResource("10_xlshx")]
visible = false
offset_left = 610.0
offset_top = 302.0
offset_right = 610.0
offset_bottom = 302.0

[node name="back" type="TextureButton" parent="."]
offset_right = 500.0
offset_bottom = 500.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("11_l6aoh")
ignore_texture_size = true

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
